# waypoint

./: README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: cognee_service.py  config.py  main.py  media.py
