[project]
name = "waypoint-backend"
version = "0.1.0"
description = "Waypoint — AI travel memory companion. FastAPI + Cognee memory graph."
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.4",
    "aiofiles>=24.1",
    "python-dotenv>=1.0",
    "cognee>=0.1.40",
    "anthropic>=0.40",
    "fastembed>=0.4",
    "faster-whisper>=1.0",
]

[tool.uv]
# lockfile lives at backend/uv.lock

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
